[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/Enemies/necromancer/Necromancer_creativekind-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/necromancer.gd" type="Script" id=6]

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "attack2"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "attack3"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "flight"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "take_hit"

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachine" id=21]
states/attack2/node = SubResource( 31 )
states/attack2/position = Vector2( 760, 217 )
states/attack3/node = SubResource( 9 )
states/attack3/position = Vector2( 744, 118 )
states/death/node = SubResource( 10 )
states/death/position = Vector2( 696, 8 )
states/flight/node = SubResource( 32 )
states/flight/position = Vector2( 1099, 169 )
states/idle/node = SubResource( 11 )
states/idle/position = Vector2( 381, 169 )
states/take_hit/node = SubResource( 12 )
states/take_hit/position = Vector2( 696, 308 )
transitions = [ "idle", "death", SubResource( 13 ), "idle", "take_hit", SubResource( 14 ), "idle", "attack3", SubResource( 15 ), "take_hit", "idle", SubResource( 17 ), "attack3", "idle", SubResource( 18 ), "take_hit", "death", SubResource( 20 ), "idle", "attack2", SubResource( 33 ), "attack2", "idle", SubResource( 34 ), "attack3", "flight", SubResource( 35 ), "attack2", "flight", SubResource( 36 ), "take_hit", "flight", SubResource( 37 ), "flight", "death", SubResource( 38 ), "flight", "attack3", SubResource( 39 ), "flight", "attack2", SubResource( 40 ), "flight", "take_hit", SubResource( 41 ) ]
graph_offset = Vector2( 235, -110 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("pivote/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("detectingArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivote/areaAttack:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:attacking")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:shilding")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=29]
resource_name = "attack2"
length = 1.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivote/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_batifire"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:attacking")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack3"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivote/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shieldAttack"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivote/areaAttack:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:attacking")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("pivote/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 102, 103, 104, 105, 106, 107, 108, 109, 110, 111 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=28]
resource_name = "flight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivote/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:shilding")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivote/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivote/areaAttack:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:shilding")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:attacking")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "take_hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("pivote/areaAttack:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:shilding")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivote/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 85, 86, 87, 88, 89 ]
}

[sub_resource type="CapsuleShape2D" id=27]
height = 28.0

[sub_resource type="CircleShape2D" id=25]
radius = 59.0

[sub_resource type="CircleShape2D" id=24]
radius = 381.257

[sub_resource type="CapsuleShape2D" id=30]
height = 28.0

[node name="necromancer" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 12
script = ExtResource( 6 )
distanceAttack = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 22 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/attack2 = SubResource( 29 )
anims/attack3 = SubResource( 3 )
anims/death = SubResource( 4 )
anims/flight = SubResource( 28 )
anims/idle = SubResource( 5 )
anims/take_hit = SubResource( 6 )

[node name="hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, -4 )
shape = SubResource( 27 )
__meta__ = {
"_edit_lock_": true
}

[node name="pivote" type="Position2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="pivote"]
position = Vector2( 0, -30 )
texture = ExtResource( 1 )
hframes = 17
vframes = 7
__meta__ = {
"_edit_lock_": true
}

[node name="spawn_batifire" type="Position2D" parent="pivote"]
position = Vector2( -8, -14 )
__meta__ = {
"_edit_lock_": true
}

[node name="areaAttack" type="Area2D" parent="pivote"]
visible = false
collision_layer = 0
collision_mask = 2
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivote/areaAttack"]
shape = SubResource( 25 )
__meta__ = {
"_edit_lock_": true
}

[node name="detectingArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectingArea"]
shape = SubResource( 24 )
__meta__ = {
"_edit_lock_": true
}

[node name="rays" type="Node2D" parent="."]
visible = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="RayCast2D" type="RayCast2D" parent="rays"]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 70 )

[node name="RayCast2D2" type="RayCast2D" parent="rays"]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 70 )

[node name="RayCast2D3" type="RayCast2D" parent="rays"]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 70 )

[node name="RayCast2D4" type="RayCast2D" parent="rays"]
enabled = true
cast_to = Vector2( 0, 70 )

[node name="contactDamage" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="contactDamage"]
position = Vector2( -1, -4 )
shape = SubResource( 30 )

[node name="shootCooldown" type="Timer" parent="."]
wait_time = 2.8

[connection signal="body_entered" from="pivote/areaAttack" to="." method="_on_areaAttack_body_entered"]
[connection signal="body_entered" from="detectingArea" to="." method="_on_detectingArea_body_entered"]
[connection signal="body_entered" from="contactDamage" to="." method="_on_contactDamage_body_entered"]
[connection signal="timeout" from="shootCooldown" to="." method="_on_shootCooldown_timeout"]
